# typed-session

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
.github/: CODE_OF_CONDUCT.md
.github/workflows/: ci.yaml
src/: cookie_store.rs  error.rs  lib.rs  memory_store.rs  session.rs  session_store.rs
src/session_store/cookie_generator/: mod.rs
tests/: test.rs
