[package]
name = "typed-session"
version = "0.1.0-alpha.13"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ISibboI/typed-session"
documentation = "https://docs.rs/typed-session"
description = "Async typed session middleware"
readme = "README.md"
edition = "2021"
keywords = ["async", "typed", "session", "middleware"]
categories = ["web-programming"]
authors = ["Sebastian Schmidt <isibboi@gmail.com>"]
rust-version = "1.65.0"

[dependencies]
async-trait = "0.1.57"
rand = "0.8.5"
anyhow = "1.0.65"
blake3 = "1.3.1"
tracing = "0.1.37"

[dependencies.chrono]
version = "0.4.22"
default-features = false
features = ["clock", "std"]

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }

