[package]
name = "typed-session"
version = "0.9.0"
license = "BSD-2-Clause"
repository = "https://github.com/ISibboI/typed-session"
documentation = "https://docs.rs/typed-session"
description = "Async typed session middleware"
readme = "README.md"
edition = "2021"
keywords = ["async", "typed", "session", "middleware"]
categories = ["web-programming"]
authors = ["Sebastian Schmidt <isibboi@gmail.com>"]
rust-version = "1.66.0"

[features]
memory-store = []

[dependencies]
async-trait = "0.1.74"
rand = "0.8.5"
blake3 = "1.5.0"
tracing = "0.1.40"
thiserror = "1.0.50"
secure-string = "0.3.0"

[dependencies.chrono]
version = "0.4.32"
default-features = false
features = ["clock", "std"]

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
